--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.2",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongoose": "^6.2.4"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
@@ -17,6 +20,10 @@
 	"license": "MIT",
 	"keywords": [
 		"node",
-		"express"
-	]
+		"express",
+		"mongoose"
+	],
+	"devDependencies": {
+		"nodemon": "^2.0.15"
+	}
 }
